# brightsign-npu-gaze-extension

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  bsext_init  build.sh  model-licenses.md  start-ext.sh
bsoe-recipes/meta-bs/recipes-open/brightsign-sdk/: brightsign-sdk.bb
include/: inference.h  publisher.h
sh/: make-example-extension-lvm
src/: inference.cpp  main.cpp  publisher.cpp
